@@ -245,7 +245,7 @@ public class AddressController extends BaseController {
 			e.printStackTrace();
 			AddressController.logger.info(e.getMessage());
 			aj.setSuccess(false);
-			aj.setInfo("导入文件异常！");
+			aj.setInfo(e.getMessage());
 		}
 		return aj;
 	}
@@ -575,43 +575,47 @@ public class AddressController extends BaseController {
 		Map<Long, Address> bindMap = new HashMap<Long, Address>();// 客户已经包含的地址列表
 		Set<String> addressNames = new HashSet<String>();
 		Set<String> adminNames = new HashSet<String>();
-
 		XSSFWorkbook wb = new XSSFWorkbook(in);
 		XSSFSheet sheet = wb.getSheetAt(0);
 		int rowNum = 1;
-		while (true) {
-			XSSFRow row = sheet.getRow(rowNum);
-			if (row == null) {
-				break;
+		try {
+			while (true) {
+				XSSFRow row = sheet.getRow(rowNum);
+				if (row == null) {
+					break;
+				}
+				rowNum++;
+				String province = row.getCell(0) == null ? null : row.getCell(0).getStringCellValue();
+				String city = row.getCell(1) == null ? null : row.getCell(1).getStringCellValue();
+				String district = row.getCell(2) == null ? null : row.getCell(2).getStringCellValue();
+				String address1 = row.getCell(3) == null ? null : row.getCell(3).getStringCellValue();
+				String address2 = row.getCell(4) == null ? null : row.getCell(4).getStringCellValue();
+				String address3 = row.getCell(5) == null ? null : row.getCell(5).getStringCellValue();
+				String deliveryStationName = row.getCell(6) == null ? null : row.getCell(6).getStringCellValue();
+				String delivererName = row.getCell(7) == null ? null : row.getCell(7).getStringCellValue();
+
+				this.addressImportService.addNonNullValue(adminNames, province);
+				this.addressImportService.addNonNullValue(adminNames, city);
+				this.addressImportService.addNonNullValue(adminNames, district);
+				this.addressImportService.addNonNullValue(addressNames, address1);
+				this.addressImportService.addNonNullValue(addressNames, address2);
+				this.addressImportService.addNonNullValue(addressNames, address3);
+
+				AddressImportDetail detail = new AddressImportDetail();
+				detail.setProvince(province);
+				detail.setCity(city);
+				detail.setDistrict(district);
+				detail.setAddress1(address1);
+				detail.setAddress2(address2);
+				detail.setAddress3(address3);
+				detail.setDeliveryStationName(deliveryStationName);
+				detail.setDelivererName(delivererName);
+				detail.setAddressImportResult(result);
+				details.add(detail);
 			}
-			rowNum++;
-			String province = row.getCell(0) == null ? null : row.getCell(0).getStringCellValue();
-			String city = row.getCell(1) == null ? null : row.getCell(1).getStringCellValue();
-			String district = row.getCell(2) == null ? null : row.getCell(2).getStringCellValue();
-			String address1 = row.getCell(3) == null ? null : row.getCell(3).getStringCellValue();
-			String address2 = row.getCell(4) == null ? null : row.getCell(4).getStringCellValue();
-			String address3 = row.getCell(5) == null ? null : row.getCell(5).getStringCellValue();
-			String deliveryStationName = row.getCell(6) == null ? null : row.getCell(6).getStringCellValue();
-			String delivererName = row.getCell(7) == null ? null : row.getCell(7).getStringCellValue();
-
-			this.addressImportService.addNonNullValue(adminNames, province);
-			this.addressImportService.addNonNullValue(adminNames, city);
-			this.addressImportService.addNonNullValue(adminNames, district);
-			this.addressImportService.addNonNullValue(addressNames, address1);
-			this.addressImportService.addNonNullValue(addressNames, address2);
-			this.addressImportService.addNonNullValue(addressNames, address3);
-
-			AddressImportDetail detail = new AddressImportDetail();
-			detail.setProvince(province);
-			detail.setCity(city);
-			detail.setDistrict(district);
-			detail.setAddress1(address1);
-			detail.setAddress2(address2);
-			detail.setAddress3(address3);
-			detail.setDeliveryStationName(deliveryStationName);
-			detail.setDelivererName(delivererName);
-			detail.setAddressImportResult(result);
-			details.add(detail);
+		} catch (Exception e) {
+			String msg = "关键词导入异常，异常行[" + rowNum + "]异常内容[" + e.getMessage() + "]";
+			throw new Exception(msg, e);
 		}
 
 		// 查找关键词并构造addressMap
@@ -629,7 +633,7 @@ public class AddressController extends BaseController {
 				m.put(a.getId() + "", a.getName());
 			}
 			for (Address a : list) {
-				if (new Integer(3).equals(a.getAddressLevel())) {
+				if (Integer.valueOf(3).equals(a.getAddressLevel())) {
 					String path = a.getPath();
 					String[] ids = path.split("-");
 					map.put(m.get(ids[1]) + "-" + m.get(ids[2]) + "-" + a.getName(), a);
